# Temperature_refrigerator

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c  ssd1306.c  ssd1306.h
mongodb_subscriber/: index.html  package.json  server.js  style.css
